--- a/C/mediapipe_api/BUILD
+++ b/C/mediapipe_api/BUILD
@@ -1,6 +1,10 @@
 load("@rules_pkg//:pkg.bzl", "pkg_zip")
 load("//mediapipe_api:import_model.bzl", "pkg_model")
 
+load(
+    "@build_bazel_rules_apple//apple:ios.bzl",    
+)
+
 cc_library(
     name = "mediapipe_c",
     deps = [
@@ -48,6 +52,14 @@ cc_binary(
     linkshared = True,
     linkstatic = True,
     visibility = ["//visibility:public"],
+)
+
+objc_library(
+    name = "IosMediaPipeLibrary",
+    deps = [
+        ":mediapipe_c",
+        "@com_google_mediapipe//mediapipe/objc:mediapipe_framework_ios",
+        "@com_google_mediapipe//mediapipe/objc:mediapipe_input_sources_ios",],    
 )
 
 # It is recommended that you include only neccessary calculators.
